Arreglos en la animacion del menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,9 @@
     "Skills": "Skills",
     "Experience": "Experience",
     "Portfolio": "Portfolio",
-    "Contact": "Contact"
+    "Contact": "Contact",
+    "Im": "Hello, I'm",
+    "WebDeveloper": "Web Developer",
+    "AboutMe": "About Me",
+    "AboutMeText": "About Me"
 }
