Seccion acerca de mi y routing del menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,6 +8,6 @@
     "Contact": "Contact",
     "Im": "Hello, I'm",
     "WebDeveloper": "Web Developer",
-    "AboutMe": "About Me",
-    "AboutMeText": "About Me"
+    "AboutMeText": "About Me Text",
+    "DownloadCV": "Download CV"
 }
