Adelanto del contenido de "What i do"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,5 +9,6 @@
     "Im": "Hello, I'm",
     "WebDeveloper": "Web Developer",
     "AboutMeText": "About Me Text",
-    "DownloadCV": "Download CV"
+    "DownloadCV": "Download CV",
+    "Databases": "Databases"
 }
