--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -10,5 +10,9 @@
     "WebDeveloper": "Desarrolladora Web",
     "AboutMeText2": "Soy Licenciada en computación, me dedico al desarrollo y personalización de aplicaciones web con tecnologías actuales. Soy una persona con ganas de aprender nuevas cosas cada día para enfrentar nuevos retos en el mundo de la programación. Estos son algunos de los lenguajes con los que he trabajado:",
     "AboutMeText": "Soy Licenciada en computación, me dedico al desarrollo y personalización de aplicaciones web con tecnologías actuales. Estos son algunos de los lenguajes con los que he trabajado:",
-    "DownloadCV": "Descargar CV"
+    "DownloadCV": "Descargar CV",
+    "Databases": "Bases de datos",
+    "FrontendDescripcion": "Me enfoco en desarrollar aplicaciones web usables y atractivas al usuario porque sigo las mejores prácticas de programación en cuanto a diseño responsive y moderno",
+    "BackendDescription": "Utilizo las tecnologías y métodos adecuados para obtener como resultado una aplicación rápida que sin duda se refleja en la eficiencia en los procesos ejecutados",
+    "DatabasesDescription": "Conozco y tengo dominio de diferentes tipos de bases de datos, llegando a diseñar e implementar un modelo de datos que se adecúe a las necesidades del negocio"
 }
