--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,5 +16,10 @@
     "BackendDescription": "Utilizo las tecnologías y métodos adecuados para obtener como resultado una aplicación rápida que sin duda se refleja en la eficiencia en los procesos ejecutados",
     "DatabasesDescription": "Conozco y tengo dominio de diferentes tipos de bases de datos, llegando a diseñar e implementar un modelo de datos que se adecúe a las necesidades del negocio",
     "TechnicallSkills": "Tecnhicall skills",
-    "SoftSkills": "Soft skills"
+    "SoftSkills": "Soft skills",
+    "Teamwork": "Teamwork",
+    "Autodidact": "Autodidact",
+    "ProblemSolving": "Problem solving",
+    "Flexibility": "Flexibility",
+    "CriticalThinking": "Critical thinking"
 }
