--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -16,5 +16,10 @@
     "BackendDescription": "Utilizo las tecnologías y métodos adecuados para obtener como resultado una aplicación rápida que sin duda se refleja en la eficiencia en los procesos ejecutados",
     "DatabasesDescription": "Conozco y tengo dominio de diferentes tipos de bases de datos, llegando a diseñar e implementar un modelo de datos que se adecúe a las necesidades del negocio",
     "TechnicallSkills": "Habilidades técnicas",
-    "SoftSkills": "Habilidades blandas"
+    "SoftSkills": "Habilidades blandas",
+    "Teamwork": "Trabajo en equipo",
+    "Autodidact": "Autodidacta",
+    "ProblemSolving": "Resolución de problemas",
+    "Flexibility": "Flexibilidad",
+    "CriticalThinking": "Pensamiento crítico"
 }
