Ajuste de estilos en seccion experiencia

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,7 +9,7 @@
     "Im": "Hola, soy",
     "WebDeveloper": "Desarrolladora Web",
     "AboutMeText2": "Soy Licenciada en computación, me dedico al desarrollo y personalización de aplicaciones web con tecnologías actuales. Soy una persona con ganas de aprender nuevas cosas cada día para enfrentar nuevos retos en el mundo de la programación. Estos son algunos de los lenguajes con los que he trabajado:",
-    "AboutMeText": "Soy Licenciada en computación, me dedico al desarrollo y personalización de aplicaciones web con tecnologías actuales. Estos son algunos de los lenguajes con los que he trabajado:",
+    "AboutMeText": "Soy Licenciada en computación, me dedico al desarrollo y personalización de aplicaciones web con tecnologías actuales. Como profesional, siempre he buscado oportunidades y desafíos que sean significativos para mí, por eso me entusiasma tener un gran impacto en los proyectos en los que trabajo. Estos son algunos de los lenguajes con los que he trabajado:",
     "DownloadCV": "Descargar CV",
     "Databases": "Bases de datos",
     "FrontendDescription": "Me enfoco en desarrollar aplicaciones web usables y atractivas al usuario porque sigo las mejores prácticas de programación en cuanto a diseño responsive y moderno",
