formulario de contacto en desktop

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,5 +25,7 @@
     "CriticalThinking": "Critical thinking",
     "Message": "Message",
     "Name": "Name",
-    "Email": "Email"
+    "Email": "Email",
+    "RequiredField": "This field is required",
+    "InvalidEmail": "The email is invalid"
 }
